# AIStoryProject

./: combined-code.txt  index.html  package-lock.json  package.json
backend/: .env.example  DESIGN_DIRECTION.md  README.md  openapi.json  pyproject.toml
backend/src/: db.sqlite3  main.py  seed.py  story_generation.py
backend/src/agent/: agents.py  llm_agent.py
backend/src/crud/: crud_avatar.py  crud_message.py  crud_prop.py  crud_scene.py  crud_scene_prop.py  crud_story.py  crud_story_setting.py  crud_system_configuration.py  crud_user.py
backend/src/database/: database.py
backend/src/orm/: __init__.py  avatar.py  message.py  prop.py  scene.py  scene_prop.py  story.py  story_setting.py  system_configuration.py  user.py
backend/src/routers/: __init__.py  admin_router.py  auth_router.py  avatar_router.py  message_router.py  standalone_avatar_router.py  standalone_story_setting_router.py  story_router.py  story_setting_router.py
backend/src/schemas/: __init__.py  avatar.py  message.py  prop.py  scene.py  scene_prop.py  story.py  story_generation.py  story_setting.py  user.py
backend/src/services/: llm_client.py
backend/src/utils/: __init__.py  export_import.py  formatting.py  parsing.py
frontend/: package-lock.json  package.json
frontend/src/: app.ts  combined-code.txt  index.css
frontend/src/api/: api.ts
frontend/src/types/: types.ts
src/: app.js  app.ts
src/components/: chat-box.js  chat-box.ts  chat-input.js  chat-message.js  chat-message.ts  chat-messages.js  chat-messages.ts  chatBot.js
src/pages/: chat-page.js  chat-page.ts  login-page.js
(+43 files in other folders)
